@@ -1,3 +1,9 @@
+2009-02-05  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tclStringObj.c: Added overflow protections to the
+	AppendUtfToUtfRep routine to either avoid invalid arguments and
+	crashes, or to replace them with controlled panics.  [Bug 2561794]
+
 2009-02-04  Don Porter  <dgp@users.sourceforge.net>
 
 	* generic/tclStringObj.c (SetUnicodeObj):       Corrected failure of
